regressions/marans/SemanticErrors/undeclaredVar.ic
//output: Failed.

class A {
      int m() {
      	  x = 5;
	  return x;
      }
}